    literally called "mlunit".
  - Additional failontestfail option in build.xml lets user choose whether the
    target should fail when tests failed or not.
  - Enable diff markers for multi-line char arrays and for cellstr arrays.
  - Align strings when preparing for diff marking. Implement alignment according
    to the shortest Levenshtein distance.

  - Fix: matlabcommand.xml's logfile option is not actually optional
  - Fix: assert_equals judges Inf and Inf as not equal
  - Fix: stack expansion for syntax errors forgets to remove .m file extension
  - Fix: assert_equals outputs 'zeros(1,0)' for empty numerical arrays of
    size [1, 0].
  - Fix: printable fails for empty char array of size [0, 1] or [1, 0].
  - Fix: assert_equals judges empty arrays not equal, if their (empty) sizes
    differ
  - Fix: jUnit XML report given and actual encoding mismatch due to gap marker;
    reports will be ISO-8859-1 in order to avoid manual UTF-8 conversion.


mlUnit 1.6.9 (2015-06-17)
-------------------------
  
  - Remove deprecate Ant code handling for matlab.bat or delegate matlab.exe
  - Add matlab.root Ant property for easier MATLAB referencing
  - Reliably fetch MATLAB executable from the system path if neither matlab.root
    nor matlab.exec given.
  - Allow single test suite execution on console for function test suites.
    Works by calling the test suite directly on the console. Not genericly
    possible for class-based test suites, as each class' constructor handles
    inheritance itself.
  - Allow single test suite execution on console with recursive_test_run.
  - Allow relative path names with recursive_test_run. [B#23]
  - Test reports get only generated if target directory argument is provided.
  - Remove quasi-reflective test name check, as we only instantiate test objects
    with automatically retrieved test cases. Also, it messed up when we tried to
    use it on methods inherited from test_case, e.g. suite_set_up, which often