@@ -15,6 +15,7 @@ mlUnit development snapshot
   - Enable diff markers for multi-line char arrays and for cellstr arrays.
   - Align strings when preparing for diff marking. Implement alignment according
     to the shortest Levenshtein distance.
+  - BSD license chosen for find_struct_differences and its test.
 
   - Fix: matlabcommand.xml's logfile option is not actually optional
   - Fix: assert_equals judges Inf and Inf as not equal
